refactor!: audit the codebase, fix backup safety bugs, and speed up backups
An audit of every file found data-safety bugs, slow paths, and a lot of code
that defended against problems a single-player backup tool does not have.

- Fix cleanup, delete, cancel, settings, runtime, and Git bugs that could lose
  a copy, hide a copy, skip the game's final save, or report a false success.
  End-to-end tests with real Git and real ZIP files reproduce each one.
- Make a Git backup start a few git processes instead of one for each file,
  write each ZIP archive one time, copy the world with parallel workers, and
  batch deletes and the start-up catalog rebuild.
- Remove duplicate helpers, dead code, test-only hooks in production classes,
  and tests that pinned old implementation details. Move the runtime logic
  into src/main, where it has tests.

BREAKING CHANGE: WorldArchive no longer reads settings files from 0.1.0 or the
shared Git repository of 0.1.0. Import that repository one time with
Import > Repository.