@@ -1,35 +1,32 @@
 package dev.ishaanko.worldarchive.core;
 
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import dev.ishaanko.worldarchive.model.BackupId;
 import dev.ishaanko.worldarchive.model.BackupTrigger;
+import dev.ishaanko.worldarchive.model.CaptureProgressListener;
 import dev.ishaanko.worldarchive.model.GameVersionStamp;
 import dev.ishaanko.worldarchive.model.WorldId;
-import dev.ishaanko.worldarchive.storage.zip.ZipBackupArtifact;
-import dev.ishaanko.worldarchive.storage.zip.ZipBackupStore;
+import dev.ishaanko.worldarchive.support.Digests;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.FileTime;
-import java.security.MessageDigest;
+import java.time.Duration;
 import java.time.Instant;
-import java.util.HexFormat;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
-import java.util.UUID;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Stream;
 import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -41,564 +38,286 @@ final class FileSystemBackupCaptureFactoryTest {
     Path temporaryDirectory;
 
     @Test
-    void removesOnlyUnlockedOwnedCrashLeftoversAndKeepsMarkersOutsidePayload() throws Exception {
-        Path captures = Files.createDirectory(temporaryDirectory.resolve("captures-recovery"));
-        UUID staleId = UUID.fromString("10000000-0000-0000-0000-000000000001");
-        Path staleCapture = Files.createDirectory(captureRoot(captures, staleId));
-        Files.writeString(staleCapture.resolve("level.dat"), "stale", StandardCharsets.UTF_8);
-        Path staleMarker = writeOwnershipMarker(captures, staleId, staleId);
-
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(captures);
-
-        assertFalse(Files.exists(staleCapture));
-        assertFalse(Files.exists(staleMarker));
-
-        UUID nextId = UUID.fromString("10000000-0000-0000-0000-000000000002");
-        Path nextCapture = Files.createDirectory(captureRoot(captures, nextId));
-        Files.writeString(nextCapture.resolve("level.dat"), "next-stale", StandardCharsets.UTF_8);
-        Path nextMarker = writeOwnershipMarker(captures, nextId, nextId);
-
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-recovery"));
-        Files.writeString(world.resolve("level.dat"), "current", StandardCharsets.UTF_8);
-        CapturedBackup captured = factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP);
-        assertFalse(Files.exists(nextCapture));
-        assertFalse(Files.exists(nextMarker));
-        Path activeCapture = captured.capture().worldDirectory();
-        Path activeMarker = markerForCapture(activeCapture);
-        try {
-            assertTrue(Files.isRegularFile(activeMarker));
-            try (var payload = Files.list(activeCapture)) {
-                assertEquals(List.of(activeCapture.resolve("level.dat")), payload.toList());
-            }
-        } finally {
-            captured.close();
-        }
-        assertFalse(Files.exists(activeCapture));
-        assertFalse(Files.exists(activeMarker));
-    }
-
-    @Test
-    void stampsCapturesWithTheInjectedGameVersion() throws Exception {
-        Path captures = temporaryDirectory.resolve("captures-stamped");
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-stamped"));
-        Files.writeString(world.resolve("level.dat"), "stamped", StandardCharsets.UTF_8);
-        GameVersionStamp stamp = new GameVersionStamp("26.2", 4_820);
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(
-                captures,
-                Optional.of(stamp));
-
-        try (CapturedBackup captured = factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP)) {
-            assertEquals(Optional.of(stamp), captured.capture().manifest().gameVersion());
-        }
-    }
-
-    @Test
-    void capturesWithoutAGameVersionWhenNoneIsInjected() throws Exception {
-        Path captures = temporaryDirectory.resolve("captures-unstamped");
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-unstamped"));
-        Files.writeString(world.resolve("level.dat"), "unstamped", StandardCharsets.UTF_8);
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(captures);
-
-        try (CapturedBackup captured = factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP)) {
-            assertEquals(Optional.empty(), captured.capture().manifest().gameVersion());
-        }
-    }
-
-    @Test
-    void preservesAnActiveCaptureAcrossStartupAndNextCaptureCleanup() throws Exception {
-        Path captures = temporaryDirectory.resolve("captures-active");
-        Path firstWorld = Files.createDirectory(temporaryDirectory.resolve("world-active-first"));
-        Files.writeString(firstWorld.resolve("level.dat"), "first", StandardCharsets.UTF_8);
-        FileSystemBackupCaptureFactory firstFactory = new FileSystemBackupCaptureFactory(captures);
-        CapturedBackup first = firstFactory.capture(
-                request(firstWorld, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP);
-        Path firstCapture = first.capture().worldDirectory();
-        Path firstMarker = markerForCapture(firstCapture);
-
-        FileSystemBackupCaptureFactory secondFactory = new FileSystemBackupCaptureFactory(captures);
-        assertTrue(Files.isDirectory(firstCapture));
-        assertTrue(Files.isRegularFile(firstMarker));
-
-        Path secondWorld = Files.createDirectory(temporaryDirectory.resolve("world-active-second"));
-        Files.writeString(secondWorld.resolve("level.dat"), "second", StandardCharsets.UTF_8);
-        CapturedBackup second = secondFactory.capture(
-                request(secondWorld, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP);
-        try {
-            assertTrue(Files.isDirectory(firstCapture));
-            assertEquals("first", Files.readString(firstCapture.resolve("level.dat")));
-        } finally {
-            second.close();
-            first.close();
-        }
-        assertFalse(Files.exists(firstCapture));
-        assertFalse(Files.exists(firstMarker));
-    }
-
-    @Test
-    void preservesUnmarkedMismatchedNoncanonicalAndUnsafeCandidates() throws Exception {
-        Path captures = Files.createDirectory(temporaryDirectory.resolve("captures-conservative"));
-
-        UUID unmarkedId = UUID.fromString("20000000-0000-0000-0000-000000000001");
-        Path unmarked = Files.createDirectory(captureRoot(captures, unmarkedId));
-        Files.writeString(unmarked.resolve("keep.txt"), "unmarked", StandardCharsets.UTF_8);
-
-        UUID mismatchedId = UUID.fromString("20000000-0000-0000-0000-000000000002");
-        Path mismatched = Files.createDirectory(captureRoot(captures, mismatchedId));
-        UUID differentId = UUID.fromString("20000000-0000-0000-0000-000000000003");
-        Path mismatchedMarker = writeOwnershipMarker(captures, mismatchedId, differentId);
-
-        UUID unsafeTreeId = UUID.fromString("20000000-0000-0000-0000-000000000004");
-        Path unsafeTree = Files.writeString(
-                captureRoot(captures, unsafeTreeId),
-                "not-a-directory",
-                StandardCharsets.UTF_8);
-        Path unsafeTreeMarker = writeOwnershipMarker(captures, unsafeTreeId, unsafeTreeId);
-
-        UUID unsafeMarkerId = UUID.fromString("20000000-0000-0000-0000-000000000005");
-        Path unsafeMarkerCapture = Files.createDirectory(captureRoot(captures, unsafeMarkerId));
-        Path unsafeMarker = Files.createDirectory(markerForCapture(unsafeMarkerCapture));
-
-        UUID noncanonicalId = UUID.fromString("abcdef00-0000-0000-0000-000000000006");
-        Path noncanonical = Files.createDirectory(
-                captures.resolve(".capture-" + noncanonicalId.toString().toUpperCase(java.util.Locale.ROOT)));
-        Path noncanonicalMarker = markerForCapture(noncanonical);
-        Files.writeString(
-                noncanonicalMarker,
-                "worldarchive-private-capture-v1:" + noncanonicalId + '\n',
-                StandardCharsets.UTF_8);
-
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(captures);
-
-        assertTrue(Files.isDirectory(unmarked));
-        assertTrue(Files.isDirectory(mismatched));
-        assertTrue(Files.isRegularFile(mismatchedMarker));
-        assertTrue(Files.isRegularFile(unsafeTree));
-        assertTrue(Files.isRegularFile(unsafeTreeMarker));
-        assertTrue(Files.isDirectory(unsafeMarkerCapture));
-        assertTrue(Files.isDirectory(unsafeMarker));
-        assertTrue(Files.isDirectory(noncanonical));
-        assertTrue(Files.isRegularFile(noncanonicalMarker));
-
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-conservative"));
-        Files.writeString(world.resolve("level.dat"), "new", StandardCharsets.UTF_8);
-        try (CapturedBackup ignored = factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP)) {
-            assertTrue(Files.isDirectory(unmarked));
-            assertTrue(Files.isRegularFile(unsafeTree));
-        }
-    }
-
-    @Test
-    void createsOneImmutablePortableCaptureWithExactChangeAccounting() throws Exception {
+    void capturesThePortableWorldWithoutGitFoldersAndCountsChangedFiles() throws Exception {
         Path world = Files.createDirectory(temporaryDirectory.resolve("world space"));
         Files.writeString(world.resolve("level.dat"), "new-level", StandardCharsets.UTF_8);
-        Path region = Files.createDirectory(world.resolve("région"));
-        Files.write(region.resolve("r.0.0.mca"), new byte[] {1, 2, 3, 4});
+        Files.write(Files.createDirectory(world.resolve("région")).resolve("r.0.0.mca"), new byte[] {1, 2, 3, 4});
         Path internal = Files.createDirectory(world.resolve(".worldarchive"));
         Files.writeString(internal.resolve("world.json"), "identity", StandardCharsets.UTF_8);
         Files.writeString(world.resolve("session.lock"), "lock", StandardCharsets.UTF_8);
+        Path pack = Files.createDirectories(world.resolve("datapacks").resolve("pack"));
+        Files.writeString(pack.resolve("pack.mcmeta"), "{}", StandardCharsets.UTF_8);
+        Files.writeString(Files.createDirectory(pack.resolve(".git")).resolve("HEAD"), "ref: main\n");
+        Files.writeString(Files.createDirectories(world.resolve("datapacks").resolve("worktree")).resolve(".git"), "gitdir: x\n");
         WorldInventory previous = WorldInventory.create(List.of(
-                entry("deleted.dat", "gone".getBytes(StandardCharsets.UTF_8)),
-                entry("level.dat", "old-level".getBytes(StandardCharsets.UTF_8))));
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(
-                temporaryDirectory.resolve("captures"));
+                entry("deleted.dat", "gone"),
+                entry("level.dat", "old-level")));
 
-        CapturedBackup captured = factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.of(previous),
-                CaptureProgressListener.NO_OP);
-        Path privateRoot = captured.capture().worldDirectory();
+        CapturedBackup captured = factory(SourceCaptureObserver.NONE).capture(request(world), CaptureKind.CLOSED_WORLD,
+                BackupId.create(), CREATED_AT, Optional.of(previous), CaptureProgressListener.NO_OP);
+        Path copy = captured.capture().worldDirectory();
         try {
-            assertFalse(privateRoot.startsWith(world));
-            assertEquals(2, captured.inventory().fileCount());
-            assertEquals(3, captured.capture().manifest().changedFileCount());
-            assertFalse(Files.exists(privateRoot.resolve(".worldarchive")));
-            assertFalse(Files.exists(privateRoot.resolve("session.lock")));
-            assertArrayEquals(
-                    new byte[] {1, 2, 3, 4},
-                    Files.readAllBytes(privateRoot.resolve("région").resolve("r.0.0.mca")));
-
+            assertEquals(
+                    List.of("datapacks/pack/pack.mcmeta", "level.dat", "région/r.0.0.mca"),
+                    captured.capture().inventory().files().stream().map(WorldInventory.Entry::path).toList());
+            assertEquals(4, captured.capture().manifest().changedFileCount());
+            assertEquals(List.of("datapacks/pack/pack.mcmeta", "datapacks/worktree", "level.dat", "région/r.0.0.mca"),
+                    relativeEntries(copy));
             Files.writeString(world.resolve("level.dat"), "mutated-live", StandardCharsets.UTF_8);
-            assertEquals("new-level", Files.readString(privateRoot.resolve("level.dat")));
+            assertEquals("new-level", Files.readString(copy.resolve("level.dat")));
         } finally {
             captured.close();
         }
-        assertFalse(Files.exists(privateRoot));
+        assertFalse(Files.exists(copy));
         assertEquals("identity", Files.readString(internal.resolve("world.json")));
     }
 
     @Test
-    void detectsPersistentSourceMutationAndDeletesPrivateStaging() throws Exception {
+    void aFileWrittenAfterItsCopyIsCopiedAgainAndTheOthersAreKept() throws Exception {
         Path world = Files.createDirectory(temporaryDirectory.resolve("world"));
-        Files.writeString(world.resolve("level.dat"), "before", StandardCharsets.UTF_8);
-        Path captures = temporaryDirectory.resolve("captures");
-        AtomicInteger mutations = new AtomicInteger();
-        SourceCaptureObserver mutator = new SourceCaptureObserver() {
-            @Override
-            public void afterFileCopy(Path relativePath) throws IOException {
-                Files.writeString(
-                        world.resolve(relativePath),
-                        "after-" + mutations.incrementAndGet(),
-                        StandardCharsets.UTF_8);
-            }
-        };
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(captures, mutator);
-
-        assertThrows(IOException.class, () -> factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP));
-
-        assertTrue(Files.isDirectory(captures));
-        try (var entries = Files.list(captures)) {
-            assertEquals(List.of(), entries.toList());
-        }
-    }
-
-    @Test
-    void oneTimeMidCaptureWriteIsRetriedAndCaptured() throws Exception {
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-retry"));
         Files.writeString(world.resolve("a.dat"), "before", StandardCharsets.UTF_8);
         Files.writeString(world.resolve("b.dat"), "stable", StandardCharsets.UTF_8);
-        AtomicBoolean mutated = new AtomicBoolean();
-        SourceCaptureObserver oneTimeMutator = new SourceCaptureObserver() {
+        Map<String, AtomicInteger> copies = new ConcurrentHashMap<>();
+        AtomicBoolean written = new AtomicBoolean();
+        SourceCaptureObserver writeOnce = new SourceCaptureObserver() {
+            @Override
+            public void beforeFileCopy(Path relativePath) {
+                copies.computeIfAbsent(relativePath.toString(), ignored -> new AtomicInteger()).incrementAndGet();
+            }
+
             @Override
             public void afterFileCopy(Path relativePath) throws IOException {
-                if (relativePath.equals(Path.of("b.dat"))
-                        && mutated.compareAndSet(false, true)) {
+                if (relativePath.toString().equals("a.dat") && written.compareAndSet(false, true)) {
                     Files.writeString(world.resolve("a.dat"), "after!", StandardCharsets.UTF_8);
                 }
             }
         };
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(
-                temporaryDirectory.resolve("captures-retry"), oneTimeMutator);
 
-        try (CapturedBackup captured = factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP)) {
-            assertEquals(2, captured.inventory().fileCount());
-            assertEquals(
-                    "after!",
-                    Files.readString(captured.capture().worldDirectory().resolve("a.dat")));
+        try (CapturedBackup captured = capture(factory(writeOnce), world)) {
+            assertEquals("after!", Files.readString(captured.capture().worldDirectory().resolve("a.dat")));
         }
+        assertEquals(2, copies.get("a.dat").get());
+        assertEquals(1, copies.get("b.dat").get());
     }
 
     @Test
-    void interruptionCleansCaptureBeforeAnyConsumerCanReceiveIt() throws Exception {
+    void aTemporaryFileReplacedDuringTheCaptureIsRetried() throws Exception {
         Path world = Files.createDirectory(temporaryDirectory.resolve("world"));
-        Files.writeString(world.resolve("level.dat"), "contents", StandardCharsets.UTF_8);
-        Path captures = temporaryDirectory.resolve("captures");
-        CountDownLatch entered = new CountDownLatch(1);
-        CountDownLatch release = new CountDownLatch(1);
-        SourceCaptureObserver blocker = new SourceCaptureObserver() {
+        Files.writeString(world.resolve("level.dat"), "old level", StandardCharsets.UTF_8);
+        Path temporary = Files.writeString(world.resolve("level.dat_new"), "new level", StandardCharsets.UTF_8);
+        SourceCaptureObserver saveMidCapture = new SourceCaptureObserver() {
             @Override
-            public void beforeFileCopy(Path relativePath) throws InterruptedException {
-                entered.countDown();
-                release.await();
+            public void beforeFileCopy(Path relativePath) throws IOException {
+                if (relativePath.toString().equals("level.dat_new") && Files.exists(temporary)) {
+                    Files.move(temporary, world.resolve("level.dat"), StandardCopyOption.REPLACE_EXISTING);
+                }
             }
         };
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(captures, blocker);
-        ExecutorService executor = Executors.newSingleThreadExecutor();
-        try {
-            Future<CapturedBackup> capture = executor.submit(() -> factory.capture(
-                    request(world, BackupTrigger.MANUAL),
-                    BackupId.create(),
-                    CREATED_AT,
-                    Optional.empty(),
-                    CaptureProgressListener.NO_OP));
-            assertTrue(entered.await(5, TimeUnit.SECONDS));
 
-            capture.cancel(true);
-            release.countDown();
-            assertThrows(java.util.concurrent.CancellationException.class, capture::get);
-        } finally {
-            release.countDown();
-            executor.shutdown();
-            assertTrue(executor.awaitTermination(5, TimeUnit.SECONDS));
-        }
-        try (var entries = Files.list(captures)) {
-            assertEquals(List.of(), entries.toList());
+        try (CapturedBackup captured = capture(factory(saveMidCapture), world)) {
+            assertEquals(List.of("level.dat"), relativeEntries(captured.capture().worldDirectory()));
+            assertEquals("new level", Files.readString(captured.capture().worldDirectory().resolve("level.dat")));
         }
     }
 
     @Test
-    void rejectsCaptureDirectoryInsideLiveWorld() throws Exception {
+    void metadataOnlyChangesDoNotFailTheCapture() throws Exception {
         Path world = Files.createDirectory(temporaryDirectory.resolve("world"));
-        Files.writeString(world.resolve("level.dat"), "contents", StandardCharsets.UTF_8);
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(
-                world.resolve("captures"));
-
-        assertThrows(IOException.class, () -> factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP));
-    }
-
-    @Test
-    void canonicalReadOnlyCaptureIsAcceptedByZipDestination() throws Exception {
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-zip"));
-        Files.writeString(world.resolve("level.dat"), "contents", StandardCharsets.UTF_8);
-        Files.createDirectories(world.resolve("region"));
-        Files.write(world.resolve("region").resolve("r.0.0.mca"), new byte[] {4, 3, 2, 1});
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(
-                temporaryDirectory.resolve("captures-zip"));
-        CapturedBackup captured = factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP);
-        try {
-            ZipBackupStore store = new ZipBackupStore(temporaryDirectory.resolve("archives"));
-            ZipBackupArtifact artifact = store.create(captured.capture());
-
-            assertTrue(store.verify(artifact.archivePath()).valid());
-            assertEquals(captured.capture().manifest(), artifact.manifest());
-        } finally {
-            captured.close();
-        }
-    }
-
-    @Test
-    void ignoresDirectoryTimestampDriftWhileFileTreeRemainsStable() throws Exception {
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-directory-time"));
-        Files.writeString(world.resolve("level.dat"), "contents", StandardCharsets.UTF_8);
+        Files.writeString(world.resolve("a.dat"), "first contents", StandardCharsets.UTF_8);
+        Files.writeString(world.resolve("b.dat"), "second contents", StandardCharsets.UTF_8);
         Path region = Files.createDirectory(world.resolve("region"));
         Files.write(region.resolve("r.0.0.mca"), new byte[] {4, 3, 2, 1});
         FileTime changedTime = FileTime.from(Instant.parse("2026-07-17T12:01:00Z"));
-        SourceCaptureObserver timestampDrift = new SourceCaptureObserver() {
-            @Override
-            public void afterFileCopy(Path relativePath) throws IOException {
-                Files.setLastModifiedTime(region, changedTime);
-            }
-        };
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(
-                temporaryDirectory.resolve("captures-directory-time"), timestampDrift);
-
-        CapturedBackup captured = factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP);
-        try {
-            assertEquals(2, captured.inventory().fileCount());
-            assertArrayEquals(
-                    new byte[] {4, 3, 2, 1},
-                    Files.readAllBytes(captured.capture()
-                            .worldDirectory()
-                            .resolve("region")
-                            .resolve("r.0.0.mca")));
-        } finally {
-            captured.close();
-        }
-    }
-
-    @Test
-    void acceptsFileTimestampDriftBeforeCopyWhenContentMatches() throws Exception {
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-file-time-before"));
-        byte[] contents = "stable contents".getBytes(StandardCharsets.UTF_8);
-        Path level = world.resolve("level.dat");
-        Files.write(level, contents);
-        FileTime changedTime = FileTime.from(Instant.parse("2026-07-17T12:02:00Z"));
-        SourceCaptureObserver timestampDrift = new SourceCaptureObserver() {
+        SourceCaptureObserver touchEverything = new SourceCaptureObserver() {
             @Override
             public void beforeFileCopy(Path relativePath) throws IOException {
                 Files.setLastModifiedTime(world.resolve(relativePath), changedTime);
             }
-        };
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(
-                temporaryDirectory.resolve("captures-file-time-before"), timestampDrift);
 
-        try (CapturedBackup captured = factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP)) {
-            assertEquals(1, captured.inventory().fileCount());
-            assertArrayEquals(
-                    contents,
-                    Files.readAllBytes(captured.capture().worldDirectory().resolve("level.dat")));
-        }
-    }
-
-    @Test
-    void acceptsEarlierFileTimestampDriftDetectedByFinalScan() throws Exception {
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-file-time-final"));
-        byte[] firstContents = "first contents".getBytes(StandardCharsets.UTF_8);
-        Path first = world.resolve("a.dat");
-        Files.write(first, firstContents);
-        Files.writeString(world.resolve("b.dat"), "second contents", StandardCharsets.UTF_8);
-        FileTime changedTime = FileTime.from(Instant.parse("2026-07-17T12:03:00Z"));
-        SourceCaptureObserver timestampDrift = new SourceCaptureObserver() {
             @Override
             public void afterFileCopy(Path relativePath) throws IOException {
-                if (relativePath.equals(Path.of("b.dat"))) {
-                    Files.setLastModifiedTime(first, changedTime);
-                }
+                Files.setLastModifiedTime(region, changedTime);
+                Files.setLastModifiedTime(world.resolve("a.dat"), FileTime.from(Instant.parse("2026-07-17T12:02:00Z")));
             }
         };
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(
-                temporaryDirectory.resolve("captures-file-time-final"), timestampDrift);
 
-        try (CapturedBackup captured = factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP)) {
-            assertEquals(2, captured.inventory().fileCount());
-            assertArrayEquals(
-                    firstContents,
-                    Files.readAllBytes(captured.capture().worldDirectory().resolve("a.dat")));
+        try (CapturedBackup captured = capture(factory(touchEverything), world)) {
+            assertEquals(3, captured.capture().inventory().fileCount());
+            assertEquals("first contents", Files.readString(captured.capture().worldDirectory().resolve("a.dat")));
         }
     }
 
+    /** Each write keeps the size and moves the timestamp to a different old value, so only the stat shows it. */
     @Test
     void rejectsSameSizeMutationDespiteFileTimestampDrift() throws Exception {
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-file-content-final"));
-        Path first = world.resolve("a.dat");
-        Files.writeString(first, "before", StandardCharsets.UTF_8);
+        Path world = Files.createDirectory(temporaryDirectory.resolve("world"));
+        Path first = Files.writeString(world.resolve("a.dat"), "before", StandardCharsets.UTF_8);
         Files.writeString(world.resolve("b.dat"), "second", StandardCharsets.UTF_8);
-        Path captures = temporaryDirectory.resolve("captures-file-content-final");
-        FileTime changedTime = FileTime.from(Instant.parse("2026-07-17T12:04:00Z"));
-        AtomicInteger mutations = new AtomicInteger();
-        SourceCaptureObserver mutator = new SourceCaptureObserver() {
+        Instant past = Instant.parse("2026-07-17T12:04:00Z");
+        AtomicInteger writes = new AtomicInteger();
+        SourceCaptureObserver rewriteSameSize = new SourceCaptureObserver() {
             @Override
             public void afterFileCopy(Path relativePath) throws IOException {
-                if (relativePath.equals(Path.of("b.dat"))) {
-                    Files.writeString(
-                            first,
-                            "chg--" + mutations.incrementAndGet(),
-                            StandardCharsets.UTF_8);
-                    Files.setLastModifiedTime(first, changedTime);
+                if (relativePath.toString().equals("a.dat")) {
+                    int write = writes.incrementAndGet();
+                    Files.writeString(first, "chg--" + write, StandardCharsets.UTF_8);
+                    Files.setLastModifiedTime(first, FileTime.from(past.plusSeconds(write)));
                 }
             }
         };
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(captures, mutator);
 
-        assertThrows(IOException.class, () -> factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP));
+        IOException failure = assertThrows(IOException.class, () -> capture(factory(rewriteSameSize), world));
 
-        try (var entries = Files.list(captures)) {
-            assertEquals(List.of(), entries.toList());
+        assertInstanceOf(CaptureChangedException.class, failure);
+        assertEquals(List.of(), relativeEntries(temporaryDirectory.resolve("captures")).stream()
+                .filter(entry -> entry.endsWith(".dat"))
+                .toList());
+    }
+
+    /**
+     * The game writes a.dat again within one timestamp tick after its copy: same size, same time.
+     * One file dated an hour ahead must not stop the capture from reading a.dat again.
+     */
+    @Test
+    void aSameTickWriteIsCaughtEvenWhenAFileIsDatedInTheFuture() throws Exception {
+        Path world = Files.createDirectory(temporaryDirectory.resolve("world"));
+        Path a = Files.writeString(world.resolve("a.dat"), "before", StandardCharsets.UTF_8);
+        Files.writeString(world.resolve("b.dat"), "stable", StandardCharsets.UTF_8);
+        Path future = Files.writeString(world.resolve("datapacks.txt"), "made on a machine with a fast clock");
+        Files.setLastModifiedTime(future, FileTime.from(Instant.now().plus(Duration.ofHours(1))));
+
+        try (CapturedBackup captured = capture(factory(sameTickWrite(a)), world)) {
+            assertEquals("after!", Files.readString(captured.capture().worldDirectory().resolve("a.dat")));
+        }
+    }
+
+    /**
+     * In the open world the game can rewrite an old file within one timestamp tick, keeping its
+     * size and time. The capture reads every file again, so it copies that file again.
+     */
+    @Test
+    void anOpenWorldCaptureCopiesAgainAnOldFileRewrittenWithTheSameSizeAndTime() throws Exception {
+        Path world = Files.createDirectory(temporaryDirectory.resolve("world"));
+        Path a = Files.writeString(world.resolve("a.dat"), "before", StandardCharsets.UTF_8);
+        Files.setLastModifiedTime(a, FileTime.from(Instant.now().minus(Duration.ofHours(1))));
+        Files.writeString(world.resolve("b.dat"), "stable", StandardCharsets.UTF_8);
+
+        try (CapturedBackup captured = capture(factory(sameTickWrite(a)), CaptureKind.OPEN_WORLD, world)) {
+            assertEquals("after!", Files.readString(captured.capture().worldDirectory().resolve("a.dat")));
         }
     }
 
     @Test
-    void rejectsSameSizeMutationWhenFileTimestampIsRestored() throws Exception {
-        Path world = Files.createDirectory(temporaryDirectory.resolve("world-file-content-hidden"));
-        Path first = world.resolve("a.dat");
-        Files.writeString(first, "before", StandardCharsets.UTF_8);
-        Files.writeString(world.resolve("b.dat"), "second", StandardCharsets.UTF_8);
-        FileTime originalTime = Files.getLastModifiedTime(first);
-        Files.writeString(first, "after!", StandardCharsets.UTF_8);
-        Files.setLastModifiedTime(first, originalTime);
-        Assumptions.assumeTrue(
-                Files.getLastModifiedTime(first).equals(originalTime),
-                "The file system cannot restore the source timestamp");
-        Files.writeString(first, "before", StandardCharsets.UTF_8);
-        Files.setLastModifiedTime(first, originalTime);
+    void aNameThatAnotherSystemCannotRestoreFailsTheCaptureAndIsNamed() throws Exception {
+        Path world = Files.createDirectory(temporaryDirectory.resolve("world"));
+        Files.writeString(world.resolve("level.dat"), "level", StandardCharsets.UTF_8);
+        Files.writeString(Files.createDirectory(world.resolve("datapacks")).resolve("aux.json"), "{}");
 
-        Path captures = temporaryDirectory.resolve("captures-file-content-hidden");
-        AtomicInteger mutations = new AtomicInteger();
-        SourceCaptureObserver mutator = new SourceCaptureObserver() {
-            @Override
-            public void afterFileCopy(Path relativePath) throws IOException {
-                if (relativePath.equals(Path.of("b.dat"))) {
-                    Files.writeString(
-                            first,
-                            "chg--" + mutations.incrementAndGet(),
-                            StandardCharsets.UTF_8);
-                    Files.setLastModifiedTime(first, originalTime);
-                }
-            }
-        };
-        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(captures, mutator);
+        IOException failure = assertThrows(IOException.class, () -> capture(factory(SourceCaptureObserver.NONE), world));
 
-        assertThrows(IOException.class, () -> factory.capture(
-                request(world, BackupTrigger.MANUAL),
-                BackupId.create(),
-                CREATED_AT,
-                Optional.empty(),
-                CaptureProgressListener.NO_OP));
+        assertTrue(failure.getMessage().contains("\"datapacks/aux.json\""), failure.getMessage());
+        assertTrue(failure.getMessage().contains("Rename or remove it"), failure.getMessage());
+    }
 
-        try (var entries = Files.list(captures)) {
-            assertEquals(List.of(), entries.toList());
+    @Test
+    void aLinkInsideTheWorldFailsTheCaptureAndIsNamed() throws Exception {
+        Path world = Files.createDirectory(temporaryDirectory.resolve("world"));
+        Path outside = Files.writeString(temporaryDirectory.resolve("outside.dat"), "not the world's");
+        try {
+            Files.createSymbolicLink(world.resolve("linked.dat"), outside);
+        } catch (IOException | UnsupportedOperationException exception) {
+            Assumptions.abort("Symbolic links are unavailable: " + exception.getMessage());
+        }
+
+        IOException failure = assertThrows(IOException.class, () -> capture(factory(SourceCaptureObserver.NONE), world));
+
+        assertTrue(failure.getMessage().contains("\"linked.dat\" is a link"), failure.getMessage());
+    }
+
+    @Test
+    void rejectsACaptureFolderInsideTheWorld() throws Exception {
+        Path world = Files.createDirectory(temporaryDirectory.resolve("world"));
+        Files.writeString(world.resolve("level.dat"), "contents", StandardCharsets.UTF_8);
+        FileSystemBackupCaptureFactory factory = new FileSystemBackupCaptureFactory(
+                world.resolve("captures"), Optional.empty(), SourceCaptureObserver.NONE);
+
+        assertThrows(IOException.class, () -> capture(factory, world));
+        assertFalse(Files.exists(world.resolve("captures")));
+    }
+
+    @Test
+    void stampsCapturesWithTheInjectedGameVersionOnly() throws Exception {
+        Path world = Files.createDirectory(temporaryDirectory.resolve("world"));
+        Files.writeString(world.resolve("level.dat"), "stamped", StandardCharsets.UTF_8);
+        GameVersionStamp stamp = new GameVersionStamp("26.2", 4_820);
+        FileSystemBackupCaptureFactory stamped = new FileSystemBackupCaptureFactory(
+                temporaryDirectory.resolve("captures"), Optional.of(stamp), SourceCaptureObserver.NONE);
+
+        try (CapturedBackup withVersion = capture(stamped, world);
+                CapturedBackup withoutVersion = capture(factory(SourceCaptureObserver.NONE), world)) {
+            assertEquals(Optional.of(stamp), withVersion.capture().manifest().gameVersion());
+            assertEquals(Optional.empty(), withoutVersion.capture().manifest().gameVersion());
         }
     }
 
-    private static CreateBackupRequest request(Path world, BackupTrigger trigger) {
-        return new CreateBackupRequest(
-                WorldId.create(),
-                world,
-                "Test World",
-                trigger);
+    /** Rewrites the file once, right after its first copy, and puts its old modification time back. */
+    private static SourceCaptureObserver sameTickWrite(Path file) {
+        AtomicBoolean written = new AtomicBoolean();
+        return new SourceCaptureObserver() {
+            @Override
+            public void afterFileCopy(Path relativePath) throws IOException {
+                if (relativePath.equals(file.getFileName()) && written.compareAndSet(false, true)) {
+                    FileTime tick = Files.getLastModifiedTime(file);
+                    Files.writeString(file, "after!", StandardCharsets.UTF_8);
+                    Files.setLastModifiedTime(file, tick);
+                }
+            }
+        };
     }
 
-    private static Path captureRoot(Path captures, UUID captureId) {
-        return captures.resolve(".capture-" + captureId);
+    private FileSystemBackupCaptureFactory factory(SourceCaptureObserver observer) {
+        return new FileSystemBackupCaptureFactory(temporaryDirectory.resolve("captures"), Optional.empty(), observer);
     }
 
-    private static Path markerForCapture(Path captureRoot) {
-        return captureRoot.resolveSibling(captureRoot.getFileName() + ".worldarchive-owner");
+    private static CapturedBackup capture(FileSystemBackupCaptureFactory factory, Path world)
+            throws IOException, InterruptedException {
+        return capture(factory, CaptureKind.CLOSED_WORLD, world);
     }
 
-    private static Path writeOwnershipMarker(Path captures, UUID fileId, UUID contentsId)
-            throws IOException {
-        Path marker = markerForCapture(captureRoot(captures, fileId));
-        Files.writeString(
-                marker,
-                "worldarchive-private-capture-v1:" + contentsId + '\n',
-                StandardCharsets.UTF_8);
-        return marker;
+    private static CapturedBackup capture(FileSystemBackupCaptureFactory factory, CaptureKind kind, Path world)
+            throws IOException, InterruptedException {
+        return factory.capture(request(world), kind, BackupId.create(), CREATED_AT, Optional.empty(),
+                CaptureProgressListener.NO_OP);
     }
 
-    private static WorldInventory.Entry entry(String path, byte[] contents) throws Exception {
-        return new WorldInventory.Entry(
-                path,
-                contents.length,
-                HexFormat.of().formatHex(MessageDigest.getInstance("SHA-256").digest(contents)));
+    private static CreateBackupRequest request(Path world) {
+        return new CreateBackupRequest(WorldId.create(), world, "Test World", Optional.empty(), BackupTrigger.MANUAL);
+    }
+
+    /** Files and empty folders below {@code root}, as sorted portable paths. */
+    private static List<String> relativeEntries(Path root) throws IOException {
+        if (!Files.exists(root)) {
+            return List.of();
+        }
+        try (Stream<Path> entries = Files.walk(root)) {
+            return entries.filter(entry -> !entry.equals(root))
+                    .filter(entry -> Files.isRegularFile(entry) || isEmptyFolder(entry))
+                    .map(entry -> root.relativize(entry).toString().replace('\\', '/'))
+                    .sorted()
+                    .toList();
+        }
+    }
+
+    private static boolean isEmptyFolder(Path entry) {
+        try (Stream<Path> children = Files.list(entry)) {
+            return children.findAny().isEmpty();
+        } catch (IOException exception) {
+            return false;
+        }
+    }
+
+    private static WorldInventory.Entry entry(String path, String contents) {
+        byte[] bytes = contents.getBytes(StandardCharsets.UTF_8);
+        return new WorldInventory.Entry(path, bytes.length, Digests.hex(Digests.sha256().digest(bytes)));
     }
 }
